# LUT-temp

./: CMakeLists.txt  README.md  lut.cu  main.cu  utils.cu
Print+Film+Emulation+LUTs/: Rec709_Kodak_2383_D65.cube  Rec709_Kodak_2393_D65.cube
Print+Film+Emulation+LUTs/__MACOSX/: ._Rec709_Fujifilm_3510_D65.cube  ._Rec709_Kodak_2383_D65.cube  ._Rec709_Kodak_2393_D65.cube
Print+Film+Emulation+LUTs/smallhd_movielooks/__MACOSX/: ._SmallHD_MovieLook_ApocalypseThisVeryMoment.cube  ._SmallHD_MovieLook_BBoyz2.cube  ._SmallHD_MovieLook_BobFord.cube  ._SmallHD_MovieLook_LifeGivingTree.cube  ._SmallHD_MovieLook_Moonrise.cube  ._SmallHD_MovieLook_SavingPrivateDamon.cube  ._SmallHD_MovieLook_TheMatrices.cube
include/: lut.h  utils.h
